refactor: clean up code